@@ -39,3 +39,4 @@ armitage.string.target_view=graph
 console.select_all.shortcut=ctrl pressed A
 armitage.log_everything.boolean=true
 armitage.no_msf_banner.boolean=false
+tab.highlight.color=#0000ff
